PR libstdc++/85040 fix std::less<void> etc. ambiguities

PR libstdc++/85040
	* include/bits/stl_function.h (greater::__not_overloaded)
	(less::__not_overloaded, greater_equal::__not_overloaded)
	(less_equal::__not_overloaded): Fix ambiguous specializations.
	* testsuite/20_util/function_objects/comparisons_pointer.cc: Add
	tests for type with overlaoded operators.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258773 138bc75d-0d04-0410-961f-82ee72b054a4